<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_exit"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        android:visibility="gone"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splash"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/quiz"
        app:lottie_autoPlay="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/kids"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/bg_gray"
            app:cardCornerRadius="5dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/quiz_kids"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kids"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/culture"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/bg_gray"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/quiz_culture"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/culture"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/leaderboard"
        android:textColor="@color/white"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginBottom="24dp"
        android:visibility="gone"/>

</RelativeLayout>